--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "kastler-cli",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "npx tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "bin": {
+    "dirmanager": "./dist/index.js"
   },
   "keywords": [],
   "author": "",
