--- a/src/components.json
+++ b/src/components.json
@@ -2,6 +2,6 @@
   {
     "name": "Button.tsx",
     "packagesRequired": "class-variance-authority",
-    "content": ""
+    "content": "import React from 'react';\n\nexport const Button = () => {\n  return <button>Click me</button>;\n};\n"
   }
 ]
